welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:31: error: Boolean does not take parameters
else (litMessage == "X") {
                         ^